# qaws

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: linux-f32.yml  linux-f64.yml  macos-f32.yml  macos-f64.yml  windows-f32.yml  windows-f64.yml
build_check/: Makefile
build_test/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile
build_test/Testing/Temporary/: CTestCostData.txt
build_test/tests/: CTestTestfile.cmake  Makefile  qaws_tests
buildsystem/: bootstrap.bat  generate_projects.bat
buildsystem/cmake/: QawsConfig.cmake.in  qaws.pc.in
buildsystem/sharpmake/src/: QawsLib.cs  QawsTests.cs  common.cs  main.cs
docs/: backends.md  building.md  curve_families.md  error_handling.md  evaluation.md  feature_per_backends.md  index.md  inspection.md  overview.md  sampling.md  surfaces.md  traversal.md
docs/api/: alloc.md  arc.md  bezier.md  bspline.md  catmull_rom.md  clothoid.md  composite.md  convert.md  curve.md  eval.md  export.md  hermite.md  import.md  inline.md  inspect.md  nurbs.md  operations.md  polynomial.md  prepare.md  rational_bezier.md  sampling.md  status.md  subdivision.md  trajectory.md  traversal.md  types.md  yuksel.md
docs/prompts/: shader_rendering_curves.md
examples/: eval_arc.glsl  eval_arc.hlsl  eval_bezier.comp  eval_bezier.hlsl  eval_bezier_halide.cpp  eval_bspline.comp  eval_bspline.hlsl  eval_cubic_poly.comp  eval_cubic_poly.hlsl  eval_nurbs.comp
src/qaws/: qaws.h  qaws_alloc.h  qaws_arc.c  qaws_arc.h  qaws_bezier.c  qaws_bezier.h  qaws_bspline.c  qaws_bspline.h  qaws_catmull_rom.c  qaws_catmull_rom.h  qaws_clothoid.c  qaws_clothoid.h  qaws_composite.c  qaws_composite.h  qaws_convert.c  qaws_convert.h  qaws_core_types.h  qaws_curve.c  qaws_curve.h  qaws_eval.c  qaws_eval.h  qaws_export.c  qaws_export.h  qaws_glsl.h  qaws_halide.h  qaws_hermite.c  qaws_hermite.h  qaws_hlsl.h  qaws_import.c  qaws_import.h  qaws_inline.c  qaws_inline.h  qaws_inspect.c  qaws_inspect.h  qaws_nurbs.c  qaws_nurbs.h  qaws_operations.c  qaws_operations.h  qaws_platform.h  qaws_polynomial.c  (+31 more)
src/qaws/acdb/: acdb.h  acdb_arc.cpp  acdb_arc.h  acdb_curve.h  acdb_spline.cpp  acdb_spline.h  acdb_types.h
src/qaws/acge/: acge.h  acge_circarc2d.h  acge_circarc3d.h  acge_types.h
src/qaws/acgi/: acgi.h  acgi_geometry.h
src/qaws/batch/: qaws_batch_bezier.c  qaws_batch_bspline.c  qaws_batch_nurbs.c  qaws_batch_surface.c
src/qaws/core/: qaws_arc_core.h  qaws_bspline_basis_core.h  qaws_bspline_eval_core.h  qaws_cubic_poly_core.h  qaws_decasteljau_core.h  qaws_horner_core.h  qaws_nurbs_eval_core.h  qaws_rational_bezier_core.h  qaws_surface_core.h
src/qaws/internal/: qaws_internal_arc_length.c  qaws_internal_arc_length.h  qaws_internal_basis.c  qaws_internal_basis.h  qaws_internal_cache.h  qaws_internal_curve.c  qaws_internal_curve.h  qaws_internal_solver.c  qaws_internal_solver.h  qaws_internal_span.c  qaws_internal_span.h  qaws_internal_surface.c  qaws_internal_surface.h  qaws_internal_types.h  qaws_internal_validation.c  qaws_internal_validation.h
src/qaws/simd/: qaws_simd.h  qaws_simd_avx2.h  qaws_simd_neon.h  qaws_simd_scalar.h  qaws_simd_sse2.h  qaws_simd_types.h
tests/: 00_status.c  01_bezier.c  02_hermite.c  03_catmull_rom.c  04_bspline.c  05_nurbs.c  06_trajectory.c  07_yuksel.c  08_rational_bezier.c  09_arc.c  10_polynomial.c  11_clothoid.c  12_subdivision.c  13_composite.c  14_evaluation.c  15_sampling.c  16_traversal.c  17_inspection.c  18_operations.c  19_conversion.c  20_intersection.c  21_export_import.c  22_surfaces.c  23_performance.c  24_error_handling.c  25_svg_curves.c  26_svg_operations.c  27_svg_analysis.c  28_svg_families.c  29_obj_curves.c  30_obj_surfaces.c  CMakeLists.txt  test_common.h  test_runner.c
